# gdscript-analyzer

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  TECH_DEBT.md  THIRD-PARTY-NOTICES.md  cliff.toml  clippy.toml  deny.toml  dist-workspace.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.changeset/: README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-or-diagnostic.yml  03-proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  corpus.yml  docs.yml  godot-api-sync.yml  labels.yml  release-napi.yml  release-plz.yml  release-wasm.yml
benches/: .gitkeep
bindings/node/: README.md  hello.mjs  index.js  package-lock.json  package.json
bindings/node/npm/: .gitkeep
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/gdscript-api/: CHANGELOG.md  Cargo.toml  README.md
crates/gdscript-api/src/: gdscript_layer.rs  generated.rs  lib.rs  lookup.rs  model.rs
crates/gdscript-base/: CHANGELOG.md  Cargo.toml  README.md
crates/gdscript-base/src/: lib.rs
crates/gdscript-cli/: Cargo.toml  README.md
crates/gdscript-cli/src/: cli.rs  config.rs  engine.rs  lib.rs  lines.rs  main.rs  report.rs
crates/gdscript-cli/tests/: cli.rs
crates/gdscript-db/: CHANGELOG.md  Cargo.toml  README.md
crates/gdscript-db/src/: lib.rs
crates/gdscript-ffi/: Cargo.toml  README.md  build.rs
crates/gdscript-ffi/src/: lib.rs
crates/gdscript-fmt/: CHANGELOG.md  Cargo.toml  DEVIATIONS.md  README.md
crates/gdscript-fmt/src/: lib.rs  wrap.rs
crates/gdscript-hir/: CHANGELOG.md  Cargo.toml  README.md
crates/gdscript-hir/src/: body.rs  cst.rs  def.rs  flow.rs  infer.rs  item_tree.rs  lib.rs  project.rs  queries.rs  resolve.rs  ty.rs  warnings.rs
crates/gdscript-ide/: CHANGELOG.md  Cargo.toml  README.md
crates/gdscript-ide/benches/: analysis.rs
crates/gdscript-ide/examples/: analyze.rs  corpus.rs
crates/gdscript-ide/src/: features.rs  lib.rs  navigation.rs  semantic.rs  semantic_tokens.rs
crates/gdscript-lsp/: Cargo.toml  README.md
crates/gdscript-lsp/src/: convert.rs  handlers.rs  lib.rs  line_index.rs  main.rs  project.rs  vfs.rs
crates/gdscript-scene/: CHANGELOG.md  Cargo.toml  README.md
crates/gdscript-scene/examples/: scene_corpus.rs
crates/gdscript-scene/src/: lib.rs  model.rs  parse.rs  tests.rs
crates/gdscript-scene/tests/: corpus_robustness.rs
crates/gdscript-scene/tests/corpus/: reactiveui_target_main.tscn
crates/gdscript-session/: Cargo.toml  README.md
crates/gdscript-session/src/: lib.rs
crates/gdscript-syntax/: CHANGELOG.md  Cargo.toml  README.md
crates/gdscript-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  prepass.rs  syntax_kind.rs
crates/gdscript-syntax/src/parser/: grammar.rs
crates/gdscript-syntax/test_data/golden/: small_class.cst
crates/gdscript-syntax/tests/: KNOWN_DIVERGENCES.md  differential.rs  robustness.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  roadmap.md
docs/src/adr/: 0001-rust-library-not-server.md  0002-handwritten-parser-treesitter-oracle.md  0003-napi-rs-v3-dual-target.md  0004-rfc-graduation-trigger.md  0005-absence-diagnostics-completeness-gate.md  0006-return-tuple-doc-tag.md  0007-initializer-narrowing.md  0008-builtin-member-miss-errors.md  README.md  template.md
docs/src/clients/: overview.md
docs/src/consume/: browser.md  node.md  rust.md
docs/src/contributing/: architecture.md  build.md  crates.md
docs/src/guide/: install.md  quickstart.md
docs/src/reference/: configuration.md  warnings.md
fixtures/ide/: .gitkeep
fixtures/parser/: .gitkeep
plans/: 00-VISION-AND-SCOPE.md  01-ARCHITECTURE.md  GODOT-SYNC.md  PHASE-0-ECOSYSTEM-AND-TOOLING.md  PHASE-1-IMPLEMENTATION-PLAYBOOK.md  PHASE-1-PARSER-AND-SYNTAX-MVP.md  PHASE-2-API-AND-SINGLE-FILE-SEMANTICS.md  PHASE-2-IMPLEMENTATION-PLAYBOOK.md  PHASE-3-IMPLEMENTATION-PLAYBOOK.md  PHASE-3-PROJECT-WIDE-AND-INCREMENTAL.md  PHASE-4-M0-PLAYBOOK.md  PHASE-4-SCENE-AWARENESS.md  PHASE-5-CLI-PLAYBOOK.md  PHASE-5-CLIENTS-AND-DISTRIBUTION.md  PHASE-5-LSP-PLAYBOOK.md  PHASE-5-NAPI-PLAYBOOK.md  PHASE-6-DEBT-BURNDOWN-PLAYBOOK.md  PHASE-6-EXECUTION-OVERVIEW.md  PHASE-6-V1-RELEASE.md  PHASE-6-W1-WARNINGS-PLAYBOOK.md  PHASE-6-W2-NARROWING-PLAYBOOK.md  PHASE-6-W3-FORMATTER-PLAYBOOK.md  PHASE-6-W4-PERF-PLAYBOOK.md  PHASE-6-W5-DOCS-PLAYBOOK.md  PHASE-6-W6-API-STABILIZATION-PLAYBOOK.md  PHASE-6-W7-ECOSYSTEM-PLAYBOOK.md  PHASE-6-W8-SCENE-RENAME-PLAYBOOK.md  README.md  ROADMAP.md  TODO.md
plans/research/: 01-rust-distribution-tooling.md  02-parsing-strategy.md  03-godot-api-sync.md  04-gdscript-semantics-and-features.md  05-prior-art-and-landscape.md  06-analyzer-architecture.md  07-ecosystem-and-release-tooling.md  08-wasm-web-and-bindings.md  09-type-system-and-inference.md
playground/: README.md  hello.html  index.html
tests/: .gitkeep
xtask/: Cargo.toml  README.md
xtask/src/: codegen.rs  docs.rs  main.rs  tasks.rs
