# Virtual workspace manifest for gdscript-analyzer (no root [package]).
# See plans/01-ARCHITECTURE.md §1/§8 and plans/PHASE-0-ECOSYSTEM-AND-TOOLING.md §A.2.

[workspace]
resolver = "3"
members = ["crates/*", "bindings/wasm", "xtask"]
# The two FFI bindings build on their own targets, not the host: `gdscript-ffi` (napi)
# needs the @napi-rs/cli to provision `libnode.dll` on Windows, and `gdscript-wasm`
# targets `wasm32-unknown-unknown` via wasm-pack. Excluding them from default-members
# keeps plain `cargo build`/`test`/`clippy` green; CI builds them in dedicated jobs.
default-members = [
    "crates/gdscript-base",
    "crates/gdscript-syntax",
    "crates/gdscript-api",
    "crates/gdscript-db",
    "crates/gdscript-hir",
    "crates/gdscript-ide",
    "crates/gdscript-scene",
    "crates/gdscript-lsp",
    "crates/gdscript-cli",
    "xtask",
]

# Shared metadata inherited by every crate via `*.workspace = true`.
[workspace.package]
version = "0.1.0" # single shared version across crates.io + npm
edition = "2024"
rust-version = "1.88.0" # MSRV = napi-rs v3 floor (asserted by the `msrv` CI job)
license = "MIT OR Apache-2.0"
repository = "https://github.com/yanivkalfa/gdscript-analyzer"
homepage = "https://github.com/yanivkalfa/gdscript-analyzer"
authors = ["Yaniv Kalfa <yanivkalfa@gmail.com>"]
categories = ["development-tools", "parser-implementations"]
keywords = ["gdscript", "godot", "analyzer", "lsp", "language-server"]

# Single source of truth for dependency versions; crates opt in with `{ workspace = true }`.
[workspace.dependencies]
# Internal crates (path + version so they publish correctly).
gdscript-base = { path = "crates/gdscript-base", version = "0.1.0" }
gdscript-syntax = { path = "crates/gdscript-syntax", version = "0.1.0" }
gdscript-api = { path = "crates/gdscript-api", version = "0.1.0" }
gdscript-db = { path = "crates/gdscript-db", version = "0.1.0" }
gdscript-hir = { path = "crates/gdscript-hir", version = "0.1.0" }
gdscript-ide = { path = "crates/gdscript-ide", version = "0.1.0" }
gdscript-scene = { path = "crates/gdscript-scene", version = "0.1.0" }
# Third-party (pinned centrally; actual use grows in later phases).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Phase 1 — parser stack. The core (base/syntax/db/hir/ide) stays wasm-clean; see
# plans/PHASE-1-IMPLEMENTATION-PLAYBOOK.md §1 for the confirmed pins + rationale.
cstree = { version = "0.14", features = ["derive"] } # lossless CST (Send+Sync, interned)
logos = "0.16" # DFA lexer; trivia kept as first-class tokens (never `skip`)
text-size = "1.1" # TextSize/TextRange POD (also a cstree transitive dep)
rustc-hash = "2.1" # deterministic FxHashMap — keeps `getrandom` out of the graph
# Phase 2 — engine-API model (plans/PHASE-2-IMPLEMENTATION-PLAYBOOK.md §4). `gdscript-api`
# normalizes `extension_api.json` into an `EngineApi`, serializes it to a binary blob at
# codegen time (`xtask codegen-api`), and loads it via `from_bytes` — `rkyv` is that
# zero-copy format (validated on load via its default `bytecheck`). `smol_str` interns the
# ~16k identifier strings in the model (≤23-byte inline = cheap `Clone`, no alloc for the
# typical method/class name); both are wasm-clean (no `std::fs`/clocks/threads). Declared
# here only — crates opt in with `.workspace = true` in Step 1, so this is inert until then.
rkyv = "0.8"
smol_str = "0.3"
# FFI — Node addon (napi). Native + wasip1-threads only; never in the wasm32-unknown
# core gate. napi-build is "2" (the README's "1" is stale — see Playbook §1).
napi = { version = "3", default-features = true }
napi-derive = "3"
napi-build = "2"
# FFI — browser (wasm-bindgen + wasm-pack --target web). The static-page path.
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
# Differential oracle — native-only, opt-in via the `tree-sitter-oracle` feature.
# MSRV 1.90 > the workspace's 1.88, so it MUST stay optional + off by default (the
# MSRV/wasm CI lanes use default features and never build it). Compiles a C parser via
# `cc`, so it can't target wasm32. See Playbook §1 / §WS5.
tree-sitter = "0.26"
tree-sitter-gdscript = "6.1"
# dev/test
expect-test = "1.5" # rust-analyzer's golden mechanism (UPDATE_EXPECT=1 to bless)
proptest = "1.11" # local panic-free robustness harness (in-process; gnu-clean)

# Lints applied workspace-wide; each crate opts in with `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "warn" # ffi/wasm crates locally `#![allow(unsafe_code)]` when they wire napi/wasm
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic opt-outs (documented rationale: noise vs. value for this codebase).
module_name_repetitions = "allow"
missing_errors_doc = "allow"

# ---- profiles ----
[profile.release]
lto = true
codegen-units = 1

# A dedicated size-optimized profile for the wasm artifacts (plans/research/08 §4).
# Build wasm with `--profile wasm-release`; keep `release` fast for the native LSP/CLI.
[profile.wasm-release]
inherits = "release"
opt-level = "z" # measure "z" vs "s" per artifact in Phase 5
lto = true
codegen-units = 1
panic = "abort"
strip = true
