[package]
name = "xtask"
description = "Repository automation for gdscript-analyzer (cargo xtask: ci | codegen-api | fixtures | dist | release)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
