[package]
name = "xtask"
description = "Repository automation for gdscript-analyzer (cargo xtask: ci | codegen-api | fixtures | dist | release)."
version.workspace = true
edition.workspace = true
readme = "README.md"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# The codegen builds an `EngineApi` model and `rkyv`-encodes it. Specified directly (not via
# the workspace dep) so `default-features = false` can turn off `bundled-api`: xtask builds the
# crate WITHOUT requiring the blob it is about to write (the bootstrap — Playbook §4.5). `cargo
# xtask` only builds xtask's own subgraph, so unification never pulls `bundled-api` back in.
gdscript-api = { path = "../crates/gdscript-api", default-features = false }
rkyv = { workspace = true }
# Codegen-time only: parse the vendored Godot doc XML into the hover-doc store. A pure-Rust DOM
# parser; never reaches the analyzer runtime or wasm.
roxmltree = "0.20"

[lints]
workspace = true
