[package]
name = "gdscript-wasm"
description = "wasm-bindgen browser binding (documented fallback to the napi-rs wasm target) for gdscript-analyzer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gdscript-ide = { workspace = true }
gdscript-base = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
