[package]
name = "gdscript-wasm"
description = "wasm-bindgen browser binding (documented fallback to the napi-rs wasm target) for gdscript-analyzer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# All logic lives in the pure-Rust, fully-tested `gdscript-session`; this crate is a thin
# #[wasm_bindgen] delegator (mirrors the napi binding `gdscript-ffi`).
gdscript-session = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }

[lints]
workspace = true
