[package]
name = "gdscript-cli"
description = "CLI for gdscript-analyzer — check / lint / format / symbols for CI and pre-commit (no editor, no Godot)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# A library (the testable command/engine/report core) + a thin binary that parses args and exits.
[lib]
name = "gdscript_cli"
path = "src/lib.rs"

[[bin]]
name = "gdscript"
path = "src/main.rs"

[dependencies]
gdscript-ide = { workspace = true }
gdscript-base = { workspace = true }
gdscript-fmt = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
annotate-snippets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true

# Distribute the `gdscript` binary via `dist` (its `publish = false` otherwise hides it).
[package.metadata.dist]
dist = true
