[package]
name = "gdscript-ffi"
description = "napi-rs binding surface for gdscript-analyzer — the Node .node addon over gdscript-ide."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
gdscript-ide = { workspace = true }
gdscript-base = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true
