[package]
name = "gdscript-fmt"
description = "GDScript source formatter (whitespace + indentation normalization, safe-by-construction) — gdscript-analyzer."
version.workspace = true
edition.workspace = true
readme = "README.md"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gdscript-base = { workspace = true }
gdscript-syntax = { workspace = true }
cstree = { workspace = true } # CST walk for the meaning-equivalence net (redundant-paren unwrap)

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
