[package]
name = "gdscript-hir"
description = "Semantic layer: name resolution, gradual type inference, and GDScript warning checks — gdscript-analyzer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gdscript-base = { workspace = true }
gdscript-syntax = { workspace = true }
gdscript-api = { workspace = true }
gdscript-db = { workspace = true }
rustc-hash = { workspace = true }
smol_str = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
