[package]
name = "gdscript-ide"
description = "The public AnalysisHost/Analysis API for gdscript-analyzer — engine-neutral, protocol-neutral (POD + byte offsets)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gdscript-base = { workspace = true }
gdscript-syntax = { workspace = true }
gdscript-api = { workspace = true }
gdscript-db = { workspace = true }
gdscript-hir = { workspace = true }
salsa = { workspace = true }
cstree = { workspace = true }
rustc-hash = { workspace = true }
text-size = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "analysis"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
