[package]
name = "gdscript-lsp"
description = "A standalone, spec-compliant GDScript LSP server built on gdscript-ide (no running Godot editor required)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
gdscript-ide = { workspace = true }

[lints]
workspace = true
