[package]
name = "gdscript-scene"
description = "A .tscn/.tres parser feeding node-path typing (the scene-aware killer feature) — gdscript-analyzer."
version.workspace = true
edition.workspace = true
readme = "README.md"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gdscript-base = { workspace = true }
smol_str = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
